# xavier-xml

./: CHANGELOG  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  crates-io.md  criterion.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: xml_edge_cases.rs  xml_parsing.rs  xml_serialization.rs
test_suite/: Cargo.toml
test_suite/src/: main.rs
test_suite/src/test/: mod.rs  serialize_test.rs
test_suite/src/tests/: dtd_test.rs  isolated_test_dbg.rs  mod.rs  namespaces_test.rs  struct_tag_test.rs  unit_struct_test.rs  unnamed_test.rs
test_suite/src/tests/concurrency/: concurrent_parsing_test.rs  mod.rs  parallel_parsing.rs  thread_safety.rs
test_suite/src/tests/core_functionality/: advanced_serde.rs  cdata_and_comments.rs  collection_handling.rs  deserialization.rs  encoding_cases.rs  mod.rs  serialization.rs  value_handling.rs  xmlns_attributes.rs
test_suite/src/tests/data_types/: collections.rs  enums.rs  mod.rs  options.rs  primitive.rs  structs.rs
test_suite/src/tests/deserialize/: attributes_test.rs  cdata_comments_test.rs  collection_test.rs  declaration_test.rs  decode_test.rs  doctype_test.rs  enum_test.rs  error_test.rs  inner_test.rs  instructions_test.rs  learn.rs  mod.rs  names_test.rs  namespaces_test.rs  option_test.rs  panic_test.rs  self_closing_test.rs  simple_test.rs  specific_cases_test.rs  struct_tag_test.rs  tree_test.rs  types_test.rs  unit_struct_test.rs  unnamed_test.rs  xmlns_test.rs
test_suite/src/tests/documentation/: examples_test.rs  mod.rs
test_suite/src/tests/error/: error_handling_test.rs  mod.rs
test_suite/src/tests/error_handling/: inner_parsing_error_tests.rs  malformed_xml_errors.rs  missing_field_errors.rs  mod.rs  panic_condition_tests.rs  serialization_error_tests.rs  specific_case_error_tests.rs  type_mismatch_errors.rs  validation_error_tests.rs
test_suite/src/tests/integration/: mod.rs  web_framework_test.rs
test_suite/src/tests/performance/: benchmark_test.rs  deep_nesting_test.rs  large_data.rs  large_xml_test.rs  mod.rs  stress_test.rs  stress_testing.rs
test_suite/src/tests/security/: malicious.rs  malicious_xml_test.rs  mod.rs
test_suite/src/tests/serialize/: attributes_test.rs  collection_test.rs  declaration_test.rs  dtd_test.rs  encode_test.rs  enum_test.rs  escaping_test.rs  header_test.rs  instructions_test.rs  mod.rs  names_test.rs  namespaces_test.rs  option_test.rs  pi_test.rs  simple_test.rs  struct_tag_test.rs  tree_test.rs  unit_struct_test.rs  unnamed_test.rs  validation_test.rs
test_suite/src/tests/stress/: large_collections_test.rs  mod.rs
xavier/: Cargo.toml
xavier/src/: lib.rs
xavier/src/deserialize/: mod.rs
xavier/src/deserialize/model/: attribute.rs  declaration.rs  doc_type.rs  element.rs  empty_tag.rs  mod.rs  q_name.rs  root.rs  tag.rs  values.rs
xavier/src/deserialize/parser/: attribute.rs  comments.rs  declaration.rs  doc_type.rs  element.rs  instructions.rs  mod.rs  root.rs  values.rs
xavier/src/serialize/: collections.rs  encoding.rs  escaping.rs  mod.rs  namespaces.rs  parser.rs  primitives.rs  types.rs
xavier_derive/: Cargo.toml
xavier_derive/src/: lib.rs
xavier_derive/src/common/: meta.rs  mod.rs
xavier_derive/src/common/naming/: case.rs  mod.rs  names.rs
xavier_derive/src/deserialize/: mod.rs  proc_macro.rs
xavier_derive/src/deserialize/parser/: complex.rs  empty.rs  enums.rs  fields.rs  loop.rs  mapping.rs  mod.rs  parser.rs  setters.rs  simple.rs  streams.rs
xavier_derive/src/serialize/: mod.rs  proc_macro.rs
xavier_derive/src/serialize/parser/: attribute.rs  complex.rs  declaration.rs  dtd.rs  element.rs  empty_tag.rs  encoding.rs  enumeration.rs  extension.rs  fields.rs  instructions.rs  meta.rs  mod.rs  namespace.rs  naming.rs  simple.rs  streams.rs  tag.rs  types.rs  typing.rs
xavier_derive/src/serialize/streams/: complex.rs  empty.rs  enumeration.rs  mod.rs  root.rs  tag.rs
xavier_derive/src/serialize/tree/: mod.rs  (+1 more)
xavier_internal/: Cargo.toml
xavier_internal/src/: lib.rs
xavier_internal/src/deserialize/: collections.rs  declaration.rs  decode.rs  doctype.rs  error.rs  escaping.rs  instructions.rs  macro_trait.rs  mod.rs  primitives.rs
xavier_internal/src/serialize/: encode.rs  escaping.rs  macro_trait.rs  mod.rs  option.rs  primitives.rs
(+61 files in other folders)
