[package]
name = "xavier-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
xavier = { path = "../xavier" }

[[bin]]
name = "xml_parsing"
path = "fuzz_targets/xml_parsing.rs"

[[bin]]
name = "xml_serialization"
path = "fuzz_targets/xml_serialization.rs"

[[bin]]
name = "xml_edge_cases"
path = "fuzz_targets/xml_edge_cases.rs" 