[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xavier = { path = "../xavier" }
quick-xml = "0.37.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"

[[bench]]
name = "benchmarks"
path = "../benches/benchmarks.rs"
harness = false

