[package]
name = "xavier"
version = "0.1.1"
authors = ["Thiago Medeiros dos Santos <thiago.santos.it@gmail.com>"]
edition = "2021"

[dependencies]
quick-xml = "0.31.0"
xavier-derive = { path = "../xavier_derive", optional = true }
xavier-internal = { path = "../xavier_internal", optional = false }

[features]
derive = ["xavier-derive"]
