[package]
name = "xavier"
version = "0.1.1"
authors = ["Thiago Medeiros dos Santos <thiago.santos.it@gmail.com>"]
edition = "2021"
license-file="LICENSE"
description="Xavier is a lightweight and versatile XML parsing library designed to streamline the process of handling XML data with ease and efficiency."
homepage="https://github.com/thiago-santos-it/xavier-xml"
documentation="crates-io.md"
repository="https://github.com/thiago-santos-it/xavier-xml"
readme="README.md"
keywords = ["xml"]

[dependencies]
quick-xml = "0.31.0"
xavier-derive = { path = "../xavier_derive", optional = true }
xavier-internal = { path = "../xavier_internal", optional = false }

[features]
derive = ["xavier-derive"]
