[package]
name = "xavier-derive"
version = "0.1.3"
authors = ["Thiago Medeiros dos Santos <thiago.santos.it@gmail.com>"]
edition = "2021"
license-file="../LICENSE"
description="Derive module of Xavier. Xavier is a lightweight and versatile XML parsing library designed to streamline the process of handling XML data with ease and efficiency."
homepage="https://github.com/thiago-santos-it/xavier-xml"
documentation="https://github.com/thiago-santos-it/xavier-xml/blob/main/crates-io.md"
repository="https://github.com/thiago-santos-it/xavier-xml"
readme="../README.md"
keywords = ["xavier", "xml"]

[dependencies]
syn = "2.0.53"
quote = "1.0.35"
proc-macro2 = "1.0.79"
convert_case = "0.6.0"

[lib]
proc-macro = true



